<resources>
    <string name="app_name">30 Days Salah Challenge</string>
    <string name="bismillah">Bismillah</string>
    <string name="quran">Quran</string>
    <string name="hadith">Hadith</string>
    <string name="salah">Salah</string>
    <string name="salah_challenge">Salah Challenge</string>
    <string name="reminder">Reminder</string>
    <string name="salah_reminder">Salah Reminder</string>
    <string name="speech">Speech</string>
    <string name="reset">Reset</string>
    <string name="deliverance">Deliverance</string>
    <string name="how_many_times_and_rakahs_have_you_completed_your_salah_today">How many times and rakahs have you completed your salah today?</string>
    <string name="fajr">Fajr</string>
    <string name="farz_in_rakah">Farz (in Rakah)</string>
    <string name="arrow_drop_down">Arrow Drop Down</string>
    <string name="sunnah_in_rakah">Sunnah (in Rakah)</string>
    <string name="zuhr">Zuhr</string>
    <string name="nafl_in_rakah">Nafl (in Rakah)</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="save">Save</string>
    <string name="off">Off</string>
    <string name="here_is_30_days_of_salat_challenge">Here is 30 days of Salat Challenge</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="_11">11</string>
    <string name="_12">12</string>
    <string name="_13">13</string>
    <string name="_14">14</string>
    <string name="_15">15</string>
    <string name="_16">16</string>
    <string name="_17">17</string>
    <string name="_18">18</string>
    <string name="_19">19</string>
    <string name="_20">20</string>
    <string name="_21">21</string>
    <string name="_22">22</string>
    <string name="_23">23</string>
    <string name="_24">24</string>
    <string name="_25">25</string>
    <string name="_26">26</string>
    <string name="_27">27</string>
    <string name="_28">28</string>
    <string name="_29">29</string>
    <string name="_30">30</string>
    <string name="isha">Isha</string>
    <string name="alarm_on">Alarm On</string>
    <string name="_4_00_am">4:00 AM</string>
    <string name="_1_00_pm">1:00 PM</string>
    <string name="_5_00_pm">5:00 PM</string>
    <string name="_6_20_pm">6:20 PM</string>
</resources>
